tests/out/semi_colon.test
Kudo: Syntax Error: (3:6): Unqualified token
    ----> tests/semi_colon.kd
       |
     2 |     let age := 20
     3 |     let age2 := 40;
       |     ^~~             : did you forget a ';'
Kudo: 1 parsing errors occured
Kudo: compilation aborted
